2004-05-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tclWinFile.c (TclpMatchInDirectory): fix for an issue
	where there was a sneak path from Tcl_DStringFree to
	SetErrorCode(0). The result was that the error code could
	be reset between a call to FindFirstFile and the check
	of its status return, leading to a bizarre error return of
	{POSIX unknown {No error}}.  (Found in unplanned test -
	no incident logged at SourceForge.)

2004-05-19  Andreas Kupries  <andreask@activestate.com>

	* tclIO.c: Fixed [SF Tcl Bug 943274]. This is the same problem as
	* tclIO.h: [SF Tcl Bug 462317], see ChangeLog entry
	           2001-09-26. The fix done at that time is incomplete. It
	           is possible to get around it if the actual read
	           operation is defered and not executed in the event
	           handler itself. Instead of tracking if we are in an
	           read caused by a synthesized fileevent we now track if
	           the OS has delivered a true event = actual data and
	           bypass the driver if a read finds that there is no
	           actual data waiting. The flag is cleared by a short or
	           full read.

2004-05-18  Kevin B. Kenny  <kennykb@acm.org>

	* compat/strftime.c (_fmt, ISO8601Week):
	* doc/clock.n:
	* tests/clock.test: Major rework to the handling of ISO8601
	week numbers.  Now passes all the %G and %V test cases on
	Windows, Linux and Solaris [Bugs #500285, #500389, and #852944]
	
2004-05-17  Kevin B. Kenny  <kennykb.@acm.org>

	* generic/tclInt.decls:      Restored TclpTime_t kludge to all
	* generic/tclIntPlatDecls.h: places where it appeared before the
	* unix/tclUnixPort.h         changes of 14 May, because use of
	* unix/tclUnixTime.h         native time_t in its place requires
	* win/tclWinTime.h:          the 8.5 header reforms.  [Bug #955146]
	
2004-05-17  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/OpenFileChnl.3: Documented type of 'offset' argument to
	Tcl_Seek was wrong. [Bug 953374]
